test/Harper/Tests/Good/issue007_lam.har
fun :: Integer -> Integer -> Integer -> Integer;
fun = {
  (f :: Integer -> Integer -> Integer -> Integer) = 
    (\(b :: Integer) (c :: Integer) (x :: Integer) => b + c - x);
  return f;
};

main :: Integer;
main = fun 1 2 3;