test/Harper/Tests/Bad/issue007_unassignable.har
fun :: Integer -> Integer;
fun n = {
    (x :: Integer) = n;
    y += 1;
    return x;
};

main :: Integer -> Integer;
main = {
    fun := (\n => n);
    return fun;
};